--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Admin LTE</title>
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+  <link rel="icon" type="image/png" href="/dist/images/favicon.png">
   <link rel="stylesheet" href="/dist/styles/main.css">
   <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -32,6 +33,7 @@
 <script src="/dist/scripts/angular-animate.js"></script>
 
 <!-- Additional Js -->
+<script src="/dist/scripts/moment.js"></script>
 <script src="/dist/scripts/chart.js"></script>
 <script src="/dist/scripts/jquery.flot.js"></script>
 <script src="/dist/scripts/jquery.flot.categories.js"></script>
@@ -47,11 +49,13 @@
 <script src="/dist/scripts/bootstrap-colorpicker.js"></script>
 <script src="/dist/scripts/bootstrap-timepicker.js"></script>
 <script src="/dist/scripts/bootstrap-datepicker.js"></script>
-<script src="https://cdn.ckeditor.com/4.5.7/standard/ckeditor.js"></script>
-
-<script src="/dist/scripts/moment.js"></script>
 <script src="/dist/scripts/daterangepicker.js"></script>
+<script src="https://cdn.ckeditor.com/4.5.7/standard/ckeditor.js"></script>
 <script src="/dist/scripts/bootstrap3-wysihtml5.all.js"></script>
+<script src="/dist/scripts/jquery.dataTables.js"></script>
+<script src="/dist/scripts/dataTables.bootstrap.js"></script>
+<script src="/dist/scripts/fullcalendar.js"></script>
+
 <script src="/dist/scripts/jquery.slimscroll.js"></script>
 <script src="dist/scripts/admin-lte.js"></script>
 <script src="dist/scripts/app.js"></script>
